Fix homepage logo on mobile.

--- a/src/components/homepage-hero/_homepage-hero.scss
+++ b/src/components/homepage-hero/_homepage-hero.scss
@@ -2,6 +2,7 @@
   margin: 100px auto;
 
   .logo {
+    width: 100%;
     max-width: 400px;
     margin-bottom: 2em;
   }
